# spleisern

./: .dev.vars.example  .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  turbo.json  worker-configuration.d.ts  wrangler.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-prod.yaml  prod.yaml
.turbo/preferences/: tui.json
app/: openai.server.ts  root.tsx  tailwind.css
app/components/: hero.tsx  hover-card.tsx  products-list.tsx
app/db/: client.server.ts  queries.server.ts
app/hooks/: use-local-storage.ts
app/lib/: session.server.ts
app/routes/: __auth.hjem.tsx  __auth.oppgjor.$id.tsx  __auth.opprett.tsx  __auth.tsx  _index.tsx  image.tsx  logg-inn.$.tsx  sso-callback.tsx
app/stores/: settlement.ts
app/utils/: date.ts  number.ts
cli/: Cargo.toml  README.md  package.json
cli/src/: auth.rs  cli.rs  client.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  test_utils.rs  types.rs
drizzle/: migrate.ts  seed.ts
migrations/: 0000_calm_ultimatum.sql  0001_giant_the_fallen.sql
migrations/meta/: 0000_snapshot.json  _journal.json
src/: app.css  app.d.ts  hooks.server.ts
src/lib/: auth.server.ts  cn.ts  types.ts  utils.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  AddMember.svelte  AddProduct.svelte  App.svelte  ProductOverview.svelte  Total.svelte
web/: .dev.vars.example  .prettierignore  drizzle.config.ts  package.json  svelte.config.js  wrangler.jsonc
web/src/: app.css  app.html  hooks.server.ts  worker-configuration.d.ts
(+97 files in other folders)
