[package]
name = "spleis-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json", "multipart", "stream"] }
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
mockito = "1.4"
lazy_static = "1.4"
